Fix spacing on final posts

--- a/style.css
+++ b/style.css
@@ -1291,6 +1291,12 @@ a:active {
 	padding: 0 0 3em; /* 0 0 48px */
 }
 
+/* Fix spacing on last entry where no post nav exists. */
+.site-main > :last-child {
+	border-bottom-width: 0;
+	margin-bottom: 0;
+}
+
 .entry-meta {
 	color: #21759b;
 	font-weight: bold;
